--- a/views/allCenterInfo.ejs
+++ b/views/allCenterInfo.ejs
@@ -85,7 +85,7 @@
 
     <!-- home   
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/hero-bg2.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/pureWhite.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <!-- <div class="overlay"></div> -->
         <div class="shadow-overlay"></div>
@@ -113,12 +113,12 @@
                     <tbody>
                         <% records.forEach(function(row,index){ %>
                             <tr>
-                                <th style="color: #0707076c ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.center %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.kormokorta %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.podobi %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.mobile %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.email %></td>
+                                <th style="color: #070707 ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.center %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.kormokorta %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.podobi %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.mobile %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.email %></td>
                             </tr>
                         <% }) %>
                     </tbody>
