--- a/views/center/employee/chak1/employeeChak1Form.ejs
+++ b/views/center/employee/chak1/employeeChak1Form.ejs
@@ -91,7 +91,7 @@
                                     <div class="form-group">
                                         <label for="pastWorkstation" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="date" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ">
+                                            <input type="text" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ">
                                         </div>
                                     </div>
 
