--- a/views/charaKolomFixed.ejs
+++ b/views/charaKolomFixed.ejs
@@ -80,7 +80,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/hero-bg10.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/pureWhite.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <!-- <div class="overlay"></div> -->
         <div class="shadow-overlay"></div>
@@ -106,10 +106,10 @@
                     <tbody>
                         <% record1.forEach(function(row,index){ %>
                             <tr>
-                                <th style="color: #0707076c ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.cname %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.cholti %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.parbotto %></td>
+                                <th style="color: #070707 ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.cname %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.cholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.parbotto %></td>
                             </tr>
                         <% }) %>
                     </tbody>
@@ -152,7 +152,7 @@
 
      <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/hero-bg2.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/pureWhite.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <!-- <div class="overlay"></div> -->
         <div class="shadow-overlay"></div>
@@ -178,10 +178,10 @@
                     <tbody>
                         <% record2.forEach(function(row,index){ %>
                             <tr>
-                                <th style="color: #0707076c ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.item %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.amount %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.cholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.item %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.amount %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.cholti %></td>
                             </tr>
                         <% }) %>
                     </tbody>
@@ -224,7 +224,7 @@
 
       <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/hero-bg3.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/pureWhite.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <!-- <div class="overlay"></div> -->
         <div class="shadow-overlay"></div>
@@ -251,11 +251,11 @@
                     <tbody>
                         <% record3.forEach(function(row,index){ %>
                             <tr>
-                                <th style="color: #0707076c ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.item %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.doshcholti %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.ekshoucchocholti %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.ekshohybridcholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.item %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.doshcholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.ekshoucchocholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.ekshohybridcholti %></td>
                             </tr>
                         <% }) %>
                     </tbody>
@@ -300,7 +300,7 @@
 
       <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/hero-bg4.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/pureWhite.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <!-- <div class="overlay"></div> -->
         <div class="shadow-overlay"></div>
@@ -327,11 +327,11 @@
                     <tbody>
                         <% record4.forEach(function(row,index){ %>
                             <tr>
-                                <th style="color: #0707076c ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.item %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.doshcholti %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.ekshoucchocholti %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.ekshohybridcholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.item %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.doshcholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.ekshoucchocholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.ekshohybridcholti %></td>
                             </tr>
                         <% }) %>
                     </tbody>
@@ -375,7 +375,7 @@
 
       <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/hero-bg12.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/pureWhite.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <!-- <div class="overlay"></div> -->
         <div class="shadow-overlay"></div>
@@ -401,10 +401,10 @@
                     <tbody>
                         <% record5.forEach(function(row,index){ %>
                             <tr>
-                                <th style="color: #0707076c ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.item %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.polycholti %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.tobcholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.item %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.polycholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.tobcholti %></td>
                             </tr>
                         <% }) %>
                     </tbody>
@@ -447,7 +447,7 @@
 
       <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/hero-bg11.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="/landingPage/images/pureWhite.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <!-- <div class="overlay"></div> -->
         <div class="shadow-overlay"></div>
@@ -474,11 +474,11 @@
                     <tbody>
                         <% record6.forEach(function(row,index){ %>
                             <tr>
-                                <th style="color: #0707076c ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.item %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.poriman %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.polycholti %></td>
-                                <th style="color: #0707076c ; border: 1px solid black"><%= row.bedcholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black;padding: 10px; "><%= index+1 %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.item %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.poriman %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.polycholti %></td>
+                                <th style="color: #070707 ; border: 1px solid black"><%= row.bedcholti %></td>
                             </tr>
                         <% }) %>
                     </tbody>
