--- a/views/pd/topSheet/topSheetTable.ejs
+++ b/views/pd/topSheet/topSheetTable.ejs
@@ -69,7 +69,8 @@
         <% }) %>
         </tbody>
     </table>
-<% }else{ %>
+<% }
+    else{ %>
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
