--- a/views/pd/topSheet/bitoron/topSheetBitoron.ejs
+++ b/views/pd/topSheet/bitoron/topSheetBitoron.ejs
@@ -52,7 +52,9 @@
 
                 <div class="table-responsive" id="output"></div>
 
-                <input type="button" id="btnExport" value="Download PDF" />
+                <button onclick="exportToPdf()" class="btn btn-success">
+                    Download PDF
+                </button>
                 <button onclick="exportToExcel('tblexportData', 'টপশীট')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
@@ -66,6 +68,20 @@
 
 
 <%- include('../../../includes/footer')-%>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+    async function exportToPdf() {
+        var year = $('#startDate').val();
+        var center = $('#center').val();
+        const { data } = await axios.post(`/pd/generatePdfTopSheetBitoron`,{year: year, center:center});
+        var mywindow = window.open("", "PRINT", "height=400,width=600");
+        mywindow.document.write(data.html);
+        mywindow.document.close(); // necessary for IE >= 10
+        mywindow.focus(); // necessary for IE >= 10*/
+        mywindow.print();
+        return true;
+    }
+</script>
 <script type="text/javascript">
     function exportToExcel(tableID, filename = ''){
         var downloadurl;
