--- a/views/center/topSheet/bitoron/topSheetBitoronCustomTable.ejs
+++ b/views/center/topSheet/bitoron/topSheetBitoronCustomTable.ejs
@@ -70,7 +70,8 @@
     <button onclick="exportToPdf()" class="btn btn-success">
         Download PDF
     </button>
-<% }else{ %>
+<% }
+else{ %>
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
