double pdf button cancel

--- a/views/center/topSheet/bitoron/topSheetBitoron.ejs
+++ b/views/center/topSheet/bitoron/topSheetBitoron.ejs
@@ -30,9 +30,9 @@
                 </div>
 
                 <div class="table-responsive" id="output"></div>
-                <button onclick="exportToPdf()" class="btn btn-success">
-                    Download PDF
-                </button>
+<!--                <button onclick="exportToPdf()" class="btn btn-success">-->
+<!--                    Download PDF-->
+<!--                </button>-->
                 <div id="output"></div>
                 <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
             </div>
