--- a/views/center/monthlyProgress/monthlyProgressTable.ejs
+++ b/views/center/monthlyProgress/monthlyProgressTable.ejs
@@ -164,25 +164,25 @@
             %>
 
             <tr>
-                <td> <%= row.category %></td>
-                <td><%= row.subCategory %></td>
-                <td><%= row.biboron %></td>
-                <td><%= row.breed %></td>
-                <td><%= new Number(productionTargetSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(currentProductionSum).toLocaleString("bn-BD") %></td>
-                <td> <%= new Number(previousMonthProduction).toLocaleString("bn-BD") %> </td>
-                <td> <%= new Number(currentProductionSum + previousMonthProduction).toLocaleString("bn-BD") %> </td>
-                <td> <%= new Number(daePraptiSum).toLocaleString("bn-BD") %> </td>
-                <td> <%= new Number(prevYearJer).toLocaleString("bn-BD") %> </td>
-                <td> <%= new Number(currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td>
-                <td><%= new Number(currentBitoronSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(currentBitoronSum + previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number((currentProductionSum + previousMonthProduction )-(currentBitoronSum + previousMonthBitoronSum)).toLocaleString("bn-BD") %></td>
-                <td><%= montobboSum %></td>
+                <td> <%= row.cropCategory.name %></td>
+                <td><%= row.cropSubCategory.name %></td>
+                <td><%= row.cropBiboron.name %></td>
+                <td><%= row.cropBreed.name %></td>
+                <td><%= new Number(productionTargetSum).toLocaleString("bn-BD") %></td> <!--  উৎপাদন (লক্ষ্যমাত্রা) -->
+                <td><%= new Number(currentProductionSum).toLocaleString("bn-BD") %></td> <!--   উৎপাদন (চলতি মাস) -->
+                <td> <%= new Number(previousMonthProduction).toLocaleString("bn-BD") %> </td> <!--  উৎপাদন (পূর্বমাস পর্যন্ত) -->
+                <td> <%= new Number(currentProductionSum + previousMonthProduction).toLocaleString("bn-BD") %> </td> <!--  মোট উৎপাদন (চলতি+পূর্ব মাস) -->
+                <td> <%= new Number(daePraptiSum).toLocaleString("bn-BD") %> </td> <!-- ডিএই চালানে প্রাপ্তি -->
+                <td> <%= new Number(prevYearJer).toLocaleString("bn-BD") %> </td> <!--  পূর্ব বছরের জের -->
+                <td> <%= new Number(currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td> <!-- সর্বমোট (মোট+ডিএই চালানে প্রাপ্তি+পূর্ব বছরের জের -->
+                <td><%= new Number(currentBitoronSum).toLocaleString("bn-BD") %></td> <!-- বিতরণ (চলতি মাস) -->
+                <td><%= new Number(previousMonthBitoronSum).toLocaleString("bn-BD") %></td> <!--  বিতরণ (পূর্বমাস পর্যন্ত) -->
+                <td><%= new Number(currentBitoronSum + previousMonthBitoronSum).toLocaleString("bn-BD") %></td> <!-- বিতরণ মোট (চলতি+পূর্ব মাস) -->
+                <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td> <!-- ডিএই চালানে প্রদান -->
+                <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td> <!-- মৃত/বিনষ্ট রাইটআপ -->
+                <td><%= new Number(currentBitoronSum + previousMonthBitoronSum + currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td> <!--  সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ) -->
+                <td><%= new Number((currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer) - (currentBitoronSum + previousMonthBitoronSum + currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td> <!--  নীট মজুদ -->
+                <td><%= montobboSum %></td>  <!-- মন্তব্য  -->
                 <td>
                     <a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>/<%= selectedDate %>"><i class="fa fa-edit"></i></a>
                     <a class="btn btn-danger btn-xs" href="/center/monthlyProgressDelete/<%= row.id %>/<%= selectedDate %>"><i class="fa fa-trash"></i></a>
